--- a/package.json
+++ b/package.json
@@ -48,6 +48,10 @@
 		"clsx": "^2.1.1",
 		"convex": "^1.13.0",
 		"convex-svelte": "^0.0.9",
+		"embla-carousel-auto-height": "^8.1.6",
+		"embla-carousel-autoplay": "^8.1.6",
+		"embla-carousel-class-names": "^8.1.6",
+		"embla-carousel-fade": "^8.1.6",
 		"embla-carousel-svelte": "^8.1.6",
 		"svelte-radix": "^1.1.0",
 		"tailwind-merge": "^2.4.0",
