--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"embla-carousel-svelte": "^8.1.6",
 		"svelte-radix": "^1.1.0",
 		"tailwind-merge": "^2.4.0",
-		"tailwind-variants": "^0.2.1"
+		"tailwind-variants": "^0.2.1",
+		"zod": "^3.23.8"
 	}
 }
