--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"axios": "^1.7.2",
 		"bits-ui": "^0.21.12",
+		"canvas": "^2.11.2",
 		"clsx": "^2.1.1",
 		"convex": "^1.13.0",
 		"convex-svelte": "^0.0.9",
@@ -53,9 +55,11 @@
 		"embla-carousel-class-names": "^8.1.6",
 		"embla-carousel-fade": "^8.1.6",
 		"embla-carousel-svelte": "^8.1.6",
+		"fast-glob": "^3.3.2",
 		"svelte-radix": "^1.1.0",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1",
+		"tfjs-node": "github:tensorflow/tfjs-node",
 		"zod": "^3.23.8"
 	}
 }
