--- a/package.json
+++ b/package.json
@@ -44,6 +44,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@ai-sdk/openai": "^0.0.36",
+		"@napi-rs/canvas": "^0.1.53",
+		"@tensorflow/tfjs-node": "^4.20.0",
+		"ai": "^3.2.28",
 		"axios": "^1.7.2",
 		"bits-ui": "^0.21.12",
 		"canvas": "^2.11.2",
@@ -56,6 +60,11 @@
 		"embla-carousel-fade": "^8.1.6",
 		"embla-carousel-svelte": "^8.1.6",
 		"fast-glob": "^3.3.2",
+		"file-type": "^19.2.0",
+		"heic-convert": "^2.1.0",
+		"openai": "^4.52.7",
+		"pino": "^9.3.1",
+		"sharp": "^0.33.4",
 		"svelte-radix": "^1.1.0",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1",
