--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.42.0",
+		"formsnap": "^1.0.1",
 		"fs": "0.0.1-security",
 		"globals": "^15.8.0",
 		"path": "^0.12.7",
@@ -35,12 +36,14 @@
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "5.0.0-next.185",
 		"svelte-check": "^3.8.4",
+		"sveltekit-superforms": "^2.16.1",
 		"tailwindcss": "^3.4.5",
 		"tslib": "^2.6.3",
 		"typescript": "^5.5.3",
 		"typescript-eslint": "8.0.0-alpha.44",
 		"vite": "^5.3.4",
-		"vitest": "^1.6.0"
+		"vitest": "^1.6.0",
+		"zod": "^3.23.8"
 	},
 	"type": "module",
 	"dependencies": {
@@ -68,7 +71,6 @@
 		"svelte-radix": "^1.1.0",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1",
-		"tfjs-node": "github:tensorflow/tfjs-node",
-		"zod": "^3.23.8"
+		"tfjs-node": "github:tensorflow/tfjs-node"
 	}
 }
