--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,11 @@
 {
-	"useTabs": true,
+	"semi": true,
 	"singleQuote": true,
-	"trailingComma": "none",
-	"printWidth": 100,
-	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
-}
+	"printWidth": 80,
+	"tabWidth": 2,
+	"useTabs": false,
+	"trailingComma": "es5",
+	"bracketSpacing": true,
+	"arrowParens": "always",
+	"endOfLine": "lf"
+  }
