--- a/package.json
+++ b/package.json
@@ -62,10 +62,15 @@
 		"embla-carousel-class-names": "^8.1.6",
 		"embla-carousel-fade": "^8.1.6",
 		"embla-carousel-svelte": "^8.1.6",
+		"exiftool-vendored": "^28.2.0",
 		"fast-glob": "^3.3.2",
 		"file-type": "^19.2.0",
 		"heic-convert": "^2.1.0",
+		"music-metadata": "^10.0.1",
+		"node-id3": "^0.2.6",
+		"node-xattr": "^1.3.5",
 		"openai": "^4.52.7",
+		"pdf-lib": "^1.17.1",
 		"pino": "^9.3.1",
 		"sharp": "^0.33.4",
 		"svelte-radix": "^1.1.0",
