--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@tailwindcss/typography": "^0.5.13",
 		"@types/eslint": "^8.56.10",
+		"@types/heic-convert": "^2.1.0",
+		"@types/heic-decode": "^1.1.2",
 		"@types/node": "^20.14.10",
 		"autoprefixer": "^10.4.19",
 		"eslint": "^9.7.0",
@@ -53,6 +55,8 @@
 		"ai": "^3.2.28",
 		"axios": "^1.7.2",
 		"bits-ui": "^0.21.12",
+		"bplist-creator": "^0.1.1",
+		"bplist-parser": "^0.3.2",
 		"canvas": "^2.11.2",
 		"clsx": "^2.1.1",
 		"convex": "^1.13.0",
@@ -66,6 +70,7 @@
 		"fast-glob": "^3.3.2",
 		"file-type": "^19.2.0",
 		"heic-convert": "^2.1.0",
+		"libheif-js": "^1.18.0",
 		"music-metadata": "^10.0.1",
 		"node-id3": "^0.2.6",
 		"node-xattr": "^1.3.5",
