--- a/package.json
+++ b/package.json
@@ -1,87 +1,89 @@
 {
-	"name": "filemaster",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"test": "npm run test:integration && npm run test:unit",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write .",
-		"test:integration": "playwright test",
-		"test:unit": "vitest"
-	},
-	"devDependencies": {
-		"@playwright/test": "^1.45.2",
-		"@sveltejs/adapter-auto": "^3.2.2",
-		"@sveltejs/kit": "^2.5.18",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
-		"@tailwindcss/typography": "^0.5.13",
-		"@types/eslint": "^8.56.10",
-		"@types/heic-convert": "^2.1.0",
-		"@types/heic-decode": "^1.1.2",
-		"@types/node": "^20.14.10",
-		"autoprefixer": "^10.4.19",
-		"eslint": "^9.7.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.42.0",
-		"formsnap": "^1.0.1",
-		"fs": "0.0.1-security",
-		"globals": "^15.8.0",
-		"path": "^0.12.7",
-		"postcss": "^8.4.39",
-		"prettier": "^3.3.3",
-		"prettier-plugin-svelte": "^3.2.5",
-		"prettier-plugin-tailwindcss": "^0.6.5",
-		"svelte": "5.0.0-next.185",
-		"svelte-check": "^3.8.4",
-		"sveltekit-superforms": "^2.16.1",
-		"tailwindcss": "^3.4.5",
-		"tslib": "^2.6.3",
-		"typescript": "^5.5.3",
-		"typescript-eslint": "8.0.0-alpha.44",
-		"vite": "^5.3.4",
-		"vitest": "^1.6.0",
-		"zod": "^3.23.8"
-	},
-	"type": "module",
-	"dependencies": {
-		"@ai-sdk/openai": "^0.0.36",
-		"@napi-rs/canvas": "^0.1.53",
-		"@tensorflow/tfjs-node": "^4.20.0",
-		"ai": "^3.2.28",
-		"axios": "^1.7.2",
-		"bits-ui": "^0.21.12",
-		"bplist-creator": "^0.1.1",
-		"bplist-parser": "^0.3.2",
-		"canvas": "^2.11.2",
-		"clsx": "^2.1.1",
-		"convex": "^1.13.0",
-		"convex-svelte": "^0.0.9",
-		"embla-carousel-auto-height": "^8.1.6",
-		"embla-carousel-autoplay": "^8.1.6",
-		"embla-carousel-class-names": "^8.1.6",
-		"embla-carousel-fade": "^8.1.6",
-		"embla-carousel-svelte": "^8.1.6",
-		"exiftool-vendored": "^28.2.0",
-		"fast-glob": "^3.3.2",
-		"file-type": "^19.2.0",
-		"heic-convert": "^2.1.0",
-		"libheif-js": "^1.18.0",
-		"music-metadata": "^10.0.1",
-		"node-id3": "^0.2.6",
-		"node-xattr": "^1.3.5",
-		"openai": "^4.52.7",
-		"pdf-lib": "^1.17.1",
-		"pino": "^9.3.1",
-		"sharp": "^0.33.4",
-		"svelte-radix": "^1.1.0",
-		"tailwind-merge": "^2.4.0",
-		"tailwind-variants": "^0.2.1",
-		"tfjs-node": "github:tensorflow/tfjs-node",
-		"tsne-js": "^1.0.3"
-	}
+  "name": "filemaster",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "npm run test:integration && npm run test:unit",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write .",
+    "test:integration": "playwright test",
+    "test:unit": "vitest",
+    "playground": "node --loader ts-node/esm playground/convert-heic.ts"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.45.2",
+    "@sveltejs/adapter-auto": "^3.2.2",
+    "@sveltejs/kit": "^2.5.18",
+    "@sveltejs/vite-plugin-svelte": "^3.1.1",
+    "@tailwindcss/typography": "^0.5.13",
+    "@types/eslint": "^8.56.10",
+    "@types/heic-convert": "^2.1.0",
+    "@types/heic-decode": "^1.1.2",
+    "@types/node": "^20.14.10",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^9.7.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^2.42.0",
+    "formsnap": "^1.0.1",
+    "fs": "0.0.1-security",
+    "globals": "^15.8.0",
+    "path": "^0.12.7",
+    "postcss": "^8.4.39",
+    "prettier": "^3.3.3",
+    "prettier-plugin-svelte": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "svelte": "5.0.0-next.185",
+    "svelte-check": "^3.8.4",
+    "sveltekit-superforms": "^2.16.1",
+    "tailwindcss": "^3.4.5",
+    "ts-node": "^10.9.2",
+    "tslib": "^2.6.3",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "8.0.0-alpha.44",
+    "vite": "^5.3.4",
+    "vitest": "^1.6.0",
+    "zod": "^3.23.8"
+  },
+  "type": "module",
+  "dependencies": {
+    "@ai-sdk/openai": "^0.0.36",
+    "@napi-rs/canvas": "^0.1.53",
+    "@tensorflow/tfjs-node": "^4.20.0",
+    "ai": "^3.2.28",
+    "axios": "^1.7.2",
+    "bits-ui": "^0.21.12",
+    "bplist-creator": "^0.1.1",
+    "bplist-parser": "^0.3.2",
+    "canvas": "^2.11.2",
+    "clsx": "^2.1.1",
+    "convex": "^1.13.0",
+    "convex-svelte": "^0.0.9",
+    "embla-carousel-auto-height": "^8.1.6",
+    "embla-carousel-autoplay": "^8.1.6",
+    "embla-carousel-class-names": "^8.1.6",
+    "embla-carousel-fade": "^8.1.6",
+    "embla-carousel-svelte": "^8.1.6",
+    "exiftool-vendored": "^28.2.0",
+    "fast-glob": "^3.3.2",
+    "file-type": "^19.2.0",
+    "heic-convert": "^2.1.0",
+    "libheif-js": "^1.18.0",
+    "music-metadata": "^10.0.1",
+    "node-id3": "^0.2.6",
+    "node-xattr": "^1.3.5",
+    "openai": "^4.52.7",
+    "pdf-lib": "^1.17.1",
+    "pino": "^9.3.1",
+    "sharp": "^0.33.4",
+    "svelte-radix": "^1.1.0",
+    "tailwind-merge": "^2.4.0",
+    "tailwind-variants": "^0.2.1",
+    "tfjs-node": "github:tensorflow/tfjs-node",
+    "tsne-js": "^1.0.3"
+  }
 }
