--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "format": "prettier --write .",
     "test:integration": "playwright test",
     "test:unit": "vitest",
-    "playground": "node --loader ts-node/esm playground/convert-heic.ts"
+    "playground1": "node --loader ts-node/esm playground/graph.ts",
+    "playground2": "node --loader ts-node/esm playground/kmeans.ts",
+    "playground3": "tsx playground/kmeans.ts",
+    "playground4": "tsx playground/graph.ts",
+    "playground5": "tsx playground/cluster.ts",
+    "playground6": "tsx playground/pca.ts",
+    "playground7": "tsx playground/index.ts"
   },
   "devDependencies": {
     "@playwright/test": "^1.45.2",
@@ -21,6 +27,7 @@
     "@sveltejs/kit": "^2.5.18",
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "@tailwindcss/typography": "^0.5.13",
+    "@types/density-clustering": "^1.3.3",
     "@types/eslint": "^8.56.10",
     "@types/heic-convert": "^2.1.0",
     "@types/heic-decode": "^1.1.2",
@@ -43,6 +50,7 @@
     "tailwindcss": "^3.4.5",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.3",
+    "tsx": "^4.17.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "8.0.0-alpha.44",
     "vite": "^5.3.4",
@@ -53,37 +61,64 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.36",
     "@napi-rs/canvas": "^0.1.53",
+    "@tensorflow/tfjs": "^4.20.0",
+    "@tensorflow/tfjs-backend-wasm": "^4.20.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.20.0",
     "@tensorflow/tfjs-node": "^4.20.0",
+    "@tensorflow/tfjs-node-gpu": "^4.20.0",
+    "@types/geojson": "^7946.0.14",
+    "@types/node-kmeans": "^1.1.2",
+    "@types/skmeans": "^0.11.7",
+    "@types/supercluster": "^7.1.3",
     "ai": "^3.2.28",
     "axios": "^1.7.2",
     "bits-ui": "^0.21.12",
     "bplist-creator": "^0.1.1",
     "bplist-parser": "^0.3.2",
     "canvas": "^2.11.2",
+    "chartjs-node-canvas": "^4.1.6",
     "clsx": "^2.1.1",
+    "clusterfck": "^1.0.0",
     "convex": "^1.13.0",
     "convex-svelte": "^0.0.9",
+    "density-clustering": "^1.3.0",
     "embla-carousel-auto-height": "^8.1.6",
     "embla-carousel-autoplay": "^8.1.6",
     "embla-carousel-class-names": "^8.1.6",
     "embla-carousel-fade": "^8.1.6",
     "embla-carousel-svelte": "^8.1.6",
+    "eslint-config-code-smells": "^0.1.2",
     "exiftool-vendored": "^28.2.0",
     "fast-glob": "^3.3.2",
     "file-type": "^19.2.0",
+    "graphology": "^0.25.4",
+    "graphology-components": "^1.5.4",
     "heic-convert": "^2.1.0",
+    "i": "^0.3.7",
     "libheif-js": "^1.18.0",
+    "ml-kmeans": "^6.0.0",
+    "ml-pca": "^4.1.1",
+    "ml-stat": "^1.3.3",
     "music-metadata": "^10.0.1",
     "node-id3": "^0.2.6",
+    "node-kmeans": "^1.1.9",
     "node-xattr": "^1.3.5",
+    "npm": "^10.8.2",
     "openai": "^4.52.7",
     "pdf-lib": "^1.17.1",
     "pino": "^9.3.1",
+    "pino-pretty": "^11.2.2",
+    "safe-replace": "^1.1.0",
+    "scikitjs": "^1.24.0",
     "sharp": "^0.33.4",
+    "simple-statistics": "^7.8.3",
+    "skmeans": "^0.11.3",
+    "supercluster": "^8.0.1",
     "svelte-radix": "^1.1.0",
     "tailwind-merge": "^2.4.0",
     "tailwind-variants": "^0.2.1",
     "tfjs-node": "github:tensorflow/tfjs-node",
-    "tsne-js": "^1.0.3"
+    "tsne-js": "^1.0.3",
+    "vega-hierarchy": "^4.1.2"
   }
 }
