--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
 		"checkJs": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
+		"allowSyntheticDefaultImports": true,
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
@@ -14,6 +15,7 @@
 	},
 	"ts-node": {
 		"esm": true,
+		"allowSyntheticDefaultImports": true,
 		"experimentalSpecifierResolution": "node"
 	},
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
