--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "playground4": "tsx playground/graph.ts",
     "playground5": "tsx playground/cluster.ts",
     "playground6": "tsx playground/pca.ts",
-    "playground7": "tsx playground/index.ts"
+    "playground7": "tsx playground/ensembleCluster/index.ts",
+    "playground8": "tsx playground/ensembleCluster/lib/main.ts"
   },
   "devDependencies": {
     "@playwright/test": "^1.45.2",
@@ -61,11 +62,13 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.36",
     "@napi-rs/canvas": "^0.1.53",
+    "@sveltejs/vite-plugin-svelte-inspector": "^2.1.0",
     "@tensorflow/tfjs": "^4.20.0",
     "@tensorflow/tfjs-backend-wasm": "^4.20.0",
     "@tensorflow/tfjs-backend-webgl": "^4.20.0",
     "@tensorflow/tfjs-node": "^4.20.0",
     "@tensorflow/tfjs-node-gpu": "^4.20.0",
+    "@testing-library/svelte": "^5.2.1",
     "@types/geojson": "^7946.0.14",
     "@types/node-kmeans": "^1.1.2",
     "@types/skmeans": "^0.11.7",
@@ -76,9 +79,9 @@
     "bplist-creator": "^0.1.1",
     "bplist-parser": "^0.3.2",
     "canvas": "^2.11.2",
+    "carbon-icons-svelte": "^12.10.0",
     "chartjs-node-canvas": "^4.1.6",
     "clsx": "^2.1.1",
-    "clusterfck": "^1.0.0",
     "convex": "^1.13.0",
     "convex-svelte": "^0.0.9",
     "density-clustering": "^1.3.0",
@@ -96,10 +99,12 @@
     "heic-convert": "^2.1.0",
     "i": "^0.3.7",
     "libheif-js": "^1.18.0",
+    "ml-hclust": "^3.1.0",
     "ml-kmeans": "^6.0.0",
     "ml-pca": "^4.1.1",
     "ml-stat": "^1.3.3",
     "music-metadata": "^10.0.1",
+    "node-fpgrowth": "^1.2.1",
     "node-id3": "^0.2.6",
     "node-kmeans": "^1.1.9",
     "node-xattr": "^1.3.5",
@@ -114,6 +119,7 @@
     "simple-statistics": "^7.8.3",
     "skmeans": "^0.11.3",
     "supercluster": "^8.0.1",
+    "svelte-confetti": "^2.1.2",
     "svelte-radix": "^1.1.0",
     "tailwind-merge": "^2.4.0",
     "tailwind-variants": "^0.2.1",
