--- a/package.json
+++ b/package.json
@@ -98,6 +98,24 @@
     "graphology-components": "^1.5.4",
     "heic-convert": "^2.1.0",
     "i": "^0.3.7",
+    "just-clone": "^6.2.0",
+    "just-compact": "^3.2.0",
+    "just-compose": "^2.3.0",
+    "just-extend": "^6.2.0",
+    "just-filter-object": "^3.2.0",
+    "just-flatten-it": "^5.2.0",
+    "just-group-by": "^2.2.0",
+    "just-is-empty": "^3.4.1",
+    "just-is-primitive": "^2.3.0",
+    "just-last": "^3.2.0",
+    "just-map-object": "^2.3.0",
+    "just-omit": "^2.2.0",
+    "just-pick": "^4.2.0",
+    "just-pipe": "^1.0.0",
+    "just-safe-get": "^4.2.0",
+    "just-safe-set": "^4.2.1",
+    "just-truncate": "^2.2.0",
+    "just-unique": "^4.2.0",
     "libheif-js": "^1.18.0",
     "ml-hclust": "^3.1.0",
     "ml-kmeans": "^6.0.0",
