--- a/package.json
+++ b/package.json
@@ -61,6 +61,15 @@
   "type": "module",
   "dependencies": {
     "@ai-sdk/openai": "^0.0.36",
+    "@antv/g": "^6.0.12",
+    "@antv/g-canvas": "^2.0.11",
+    "@antv/g2": "^5.2.3",
+    "@antv/g6": "^5.0.16",
+    "@antv/hierarchy": "^0.6.12",
+    "@antv/l7": "^2.22.1",
+    "@antv/layout": "1.2.14-beta.5",
+    "@antv/s2": "^1.55.8",
+    "@antv/util": "^3.3.8",
     "@napi-rs/canvas": "^0.1.53",
     "@sveltejs/vite-plugin-svelte-inspector": "^2.1.0",
     "@tensorflow/tfjs": "^4.20.0",
@@ -98,6 +107,8 @@
     "graphology-components": "^1.5.4",
     "heic-convert": "^2.1.0",
     "i": "^0.3.7",
+    "just-cartesian-product": "^4.2.0",
+    "just-clamp": "^4.2.0",
     "just-clone": "^6.2.0",
     "just-compact": "^3.2.0",
     "just-compose": "^2.3.0",
@@ -109,11 +120,18 @@
     "just-is-primitive": "^2.3.0",
     "just-last": "^3.2.0",
     "just-map-object": "^2.3.0",
+    "just-mean": "^2.2.0",
+    "just-mode": "^2.2.0",
     "just-omit": "^2.2.0",
     "just-pick": "^4.2.0",
     "just-pipe": "^1.0.0",
+    "just-pluck": "^1.0.0",
+    "just-pluck-it": "^2.3.0",
+    "just-range": "^4.2.0",
+    "just-reduce-object": "^2.3.0",
     "just-safe-get": "^4.2.0",
     "just-safe-set": "^4.2.1",
+    "just-standard-deviation": "^2.2.0",
     "just-truncate": "^2.2.0",
     "just-unique": "^4.2.0",
     "libheif-js": "^1.18.0",
@@ -121,7 +139,7 @@
     "ml-kmeans": "^6.0.0",
     "ml-pca": "^4.1.1",
     "ml-stat": "^1.3.3",
-    "music-metadata": "^10.0.1",
+    "music-metadata": "^10.2.0",
     "node-fpgrowth": "^1.2.1",
     "node-id3": "^0.2.6",
     "node-kmeans": "^1.1.9",
@@ -138,8 +156,8 @@
     "skmeans": "^0.11.3",
     "supercluster": "^8.0.1",
     "svelte-confetti": "^2.1.2",
-    "svelte-radix": "^1.1.0",
-    "tailwind-merge": "^2.4.0",
+    "svelte-radix": "^1.1.1",
+    "tailwind-merge": "^2.5.2",
     "tailwind-variants": "^0.2.1",
     "tfjs-node": "github:tensorflow/tfjs-node",
     "tsne-js": "^1.0.3",
