--- a/package.json
+++ b/package.json
@@ -2,63 +2,112 @@
   "name": "filemaster",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test": "npm run test:integration && npm run test:unit",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --check . && eslint .",
-    "format": "prettier --write .",
-    "test:integration": "playwright test",
-    "test:unit": "vitest",
-    "playground1": "node --loader ts-node/esm playground/graph.ts",
-    "playground2": "node --loader ts-node/esm playground/kmeans.ts",
-    "playground3": "tsx playground/kmeans.ts",
-    "playground4": "tsx playground/graph.ts",
-    "playground5": "tsx playground/cluster.ts",
-    "playground6": "tsx playground/pca.ts",
-    "playground7": "tsx playground/ensembleCluster/index.ts",
-    "playground8": "tsx playground/ensembleCluster/lib/main.ts"
+    "dev": "pnpm vite dev",
+    "build": "pnpm vite build",
+    "preview": "pnpm vite preview",
+    "test": "pnpm vitest run",
+    "test:watch": "pnpm vitest",
+    "test:ui": "pnpm vitest --ui",
+    "test:coverage": "pnpm vitest run --coverage",
+    "test:unit": "TEST_ENV=node pnpm vitest run ./tests/unit",
+    "test:unit:string-utils": "TEST_ENV=node pnpm vitest run ./tests/unit/string-utils.spec.ts",
+    "test:playground": "TEST_ENV=node pnpm vitest run ./tests/playground/tests/",
+    "test:playground:graph": "TEST_ENV=node pnpm vitest run ./tests/playground/tests/graph.spec.ts",
+    "test:integration": "TEST_ENV=jsdom pnpm vitest run ./tests/integration",
+    "test:integration:shadcn": "TEST_ENV=jsdom pnpm vitest run ./tests/integration/shadcn.spec.ts",
+    "test:integration:layout": "TEST_ENV=jsdom pnpm vitest run ./tests/integration/layout.spec.ts",
+    "test:integration:page": "TEST_ENV=jsdom pnpm vitest run ./tests/integration/page.spec.ts",
+    "test:configs": "NODE_OPTIONS='--max-old-space-size=4096' TEST_ENV=node pnpm vitest run ./tests/configs",
+    "test:configs:schemas": "TEST_ENV=node pnpm vitest run ./tests/configs/schemas.spec.ts",
+    "test:configs:environment": "TEST_ENV=node pnpm vitest run ./tests/configs/environment.spec.ts",
+    "test:configs:node-env": "TEST_ENV=node pnpm vitest run ./tests/configs/node-env.spec.ts",
+    "test:configs:pnpm": "TEST_ENV=node pnpm vitest run ./tests/configs/pnpm.spec.ts",
+    "test:configs:vite-build": "TEST_ENV=node pnpm vitest run ./tests/configs/vite-build.spec.ts",
+    "test:configs:config": "TEST_ENV=node pnpm vitest run ./tests/configs/config.spec.ts",
+    "test:configs:typescript": "TEST_ENV=node pnpm vitest run ./tests/configs/typescript.spec.ts",
+    "test:configs:svelte-setup": "TEST_ENV=node pnpm vitest run ./tests/configs/svelte-setup.spec.ts",
+    "test:configs:playwright-setup": "TEST_ENV=node pnpm vitest run ./tests/configs/playwright-setup.spec.ts",
+    "test:frameworks": "TEST_ENV=jsdom pnpm vitest run ./tests/frameworks",
+    "test:frameworks:svelte": "TEST_ENV=jsdom pnpm vitest run ./tests/frameworks/svelte.spec.ts",
+    "test:frameworks:tailwind": "TEST_ENV=jsdom pnpm vitest run ./tests/frameworks/tailwind.spec.ts",
+    "test:e2e": "TEST_ENV=jsdom pnpm vitest run ./tests/e2e",
+    "test:e2e:forms": "TEST_ENV=jsdom pnpm vitest run ./tests/e2e/forms.spec.ts",
+    "test:api": "TEST_ENV=node pnpm vitest run ./tests/api",
+    "test:api:routes-api": "TEST_ENV=node pnpm vitest run ./tests/api/routes-api.spec.ts",
+    "test:node": "TEST_ENV=node pnpm vitest run",
+    "test:jsdom": "TEST_ENV=jsdom pnpm vitest run",
+    "test:special": "TEST_ENV=jsdom pnpm vitest run ./tests/special-case.spec.ts",
+    "check": "pnpm svelte-kit sync && pnpm svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "pnpm svelte-kit sync && pnpm svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "pnpm prettier --check . && pnpm eslint .",
+    "lint:fix": "pnpm eslint . --fix && pnpm prettier --write .",
+    "format": "pnpm prettier --write .",
+    "clean": "rm -rf node_modules .svelte-kit build dist",
+    "playground1": "tsx playground/kmeans.ts",
+    "playground2": "tsx playground/graph.ts",
+    "playground3": "tsx playground/cluster.ts",
+    "playground4": "tsx playground/pca.ts",
+    "playground5": "tsx playground/ensembleCluster/index.ts",
+    "playground6": "tsx playground/ensembleCluster/lib/main.ts",
+    "playground7": "tsx src/lib/utilities/antv/antv.ts",
+    "playground8": "tsx playground/antv.ts"
   },
   "devDependencies": {
-    "@playwright/test": "^1.45.2",
-    "@sveltejs/adapter-auto": "^3.2.2",
-    "@sveltejs/kit": "^2.5.18",
-    "@sveltejs/vite-plugin-svelte": "^3.1.1",
-    "@tailwindcss/typography": "^0.5.13",
+    "@playwright/test": "^1.46.1",
+    "@sveltejs/adapter-auto": "^3.2.4",
+    "@sveltejs/kit": "^2.5.24",
+    "@sveltejs/vite-plugin-svelte": "4.0.0-next.6",
+    "@tailwindcss/typography": "^0.5.14",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/svelte": "^4.2.3",
     "@types/density-clustering": "^1.3.3",
-    "@types/eslint": "^8.56.10",
+    "@types/eslint": "^8.56.11",
     "@types/heic-convert": "^2.1.0",
     "@types/heic-decode": "^1.1.2",
-    "@types/node": "^20.14.10",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^9.7.0",
+    "@types/jest": "^29.5.12",
+    "@types/jsdom": "^21.1.7",
+    "@types/node": "^20.16.1",
+    "@vitest/ui": "^2.0.5",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.42.0",
+    "eslint-plugin-svelte": "^2.43.0",
     "formsnap": "^1.0.1",
     "fs": "0.0.1-security",
-    "globals": "^15.8.0",
+    "globals": "^15.9.0",
+    "jsdom": "^24.1.1",
+    "memfs": "^4.11.1",
+    "npm-check-updates": "^17.1.0",
     "path": "^0.12.7",
-    "postcss": "^8.4.39",
+    "path-browserify": "^1.0.1",
+    "playwright": "^1.46.1",
+    "postcss": "^8.4.41",
     "prettier": "^3.3.3",
-    "prettier-plugin-svelte": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.6.5",
+    "prettier-plugin-svelte": "^3.2.6",
+    "prettier-plugin-tailwindcss": "^0.6.6",
+    "rollup-plugin-node-builtins": "^2.1.2",
     "svelte": "5.0.0-next.185",
-    "svelte-check": "^3.8.4",
-    "sveltekit-superforms": "^2.16.1",
-    "tailwindcss": "^3.4.5",
+    "svelte-check": "^3.8.5",
+    "svelte-inline-compile": "^0.2.0",
+    "sveltekit-superforms": "^2.17.0",
+    "tailwindcss": "^3.4.10",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.3",
     "tsx": "^4.17.0",
-    "typescript": "^5.5.3",
+    "twind": "^0.16.19",
+    "typescript": "^5.5.4",
     "typescript-eslint": "8.0.0-alpha.44",
-    "vite": "^5.3.4",
+    "vite": "^5.4.2",
+    "vite-plugin-commonjs": "^0.10.1",
     "vitest": "^1.6.0",
+    "wait-on": "^8.0.0",
     "zod": "^3.23.8"
   },
-  "type": "module",
+  "overrides": {
+    "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6"
+  },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.36",
     "@antv/g": "^6.0.12",
@@ -70,42 +119,45 @@
     "@antv/layout": "1.2.14-beta.5",
     "@antv/s2": "^1.55.8",
     "@antv/util": "^3.3.8",
-    "@napi-rs/canvas": "^0.1.53",
+    "@napi-rs/canvas": "^0.1.54",
     "@sveltejs/vite-plugin-svelte-inspector": "^2.1.0",
     "@tensorflow/tfjs": "^4.20.0",
     "@tensorflow/tfjs-backend-wasm": "^4.20.0",
     "@tensorflow/tfjs-backend-webgl": "^4.20.0",
     "@tensorflow/tfjs-node": "^4.20.0",
     "@tensorflow/tfjs-node-gpu": "^4.20.0",
-    "@testing-library/svelte": "^5.2.1",
+    "@twind/core": "^1.1.3",
+    "@twind/preset-autoprefix": "^1.0.7",
+    "@twind/preset-tailwind": "^1.1.4",
     "@types/geojson": "^7946.0.14",
     "@types/node-kmeans": "^1.1.2",
     "@types/skmeans": "^0.11.7",
     "@types/supercluster": "^7.1.3",
-    "ai": "^3.2.28",
-    "axios": "^1.7.2",
-    "bits-ui": "^0.21.12",
+    "ai": "^3.3.14",
+    "axios": "^1.7.4",
+    "bits-ui": "^0.21.13",
     "bplist-creator": "^0.1.1",
     "bplist-parser": "^0.3.2",
     "canvas": "^2.11.2",
     "carbon-icons-svelte": "^12.10.0",
     "chartjs-node-canvas": "^4.1.6",
     "clsx": "^2.1.1",
-    "convex": "^1.13.0",
+    "convex": "^1.14.2",
     "convex-svelte": "^0.0.9",
     "density-clustering": "^1.3.0",
-    "embla-carousel-auto-height": "^8.1.6",
-    "embla-carousel-autoplay": "^8.1.6",
-    "embla-carousel-class-names": "^8.1.6",
-    "embla-carousel-fade": "^8.1.6",
-    "embla-carousel-svelte": "^8.1.6",
+    "embla-carousel-auto-height": "^8.2.0",
+    "embla-carousel-autoplay": "^8.2.0",
+    "embla-carousel-class-names": "^8.2.0",
+    "embla-carousel-fade": "^8.2.0",
+    "embla-carousel-svelte": "^8.2.0",
     "eslint-config-code-smells": "^0.1.2",
-    "exiftool-vendored": "^28.2.0",
+    "exiftool-vendored": "^28.2.1",
     "fast-glob": "^3.3.2",
-    "file-type": "^19.2.0",
+    "file-type": "^19.4.1",
     "graphology": "^0.25.4",
     "graphology-components": "^1.5.4",
     "heic-convert": "^2.1.0",
+    "heic-decode": "^2.0.0",
     "i": "^0.3.7",
     "just-cartesian-product": "^4.2.0",
     "just-clamp": "^4.2.0",
@@ -145,13 +197,13 @@
     "node-kmeans": "^1.1.9",
     "node-xattr": "^1.3.5",
     "npm": "^10.8.2",
-    "openai": "^4.52.7",
+    "openai": "^4.56.0",
     "pdf-lib": "^1.17.1",
-    "pino": "^9.3.1",
+    "pino": "^9.3.2",
     "pino-pretty": "^11.2.2",
     "safe-replace": "^1.1.0",
     "scikitjs": "^1.24.0",
-    "sharp": "^0.33.4",
+    "sharp": "^0.33.5",
     "simple-statistics": "^7.8.3",
     "skmeans": "^0.11.3",
     "supercluster": "^8.0.1",
