--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,35 @@
 {
-	"extends": "./.svelte-kit/tsconfig.json",
-	"compilerOptions": {
-		"allowJs": true,
-		"checkJs": true,
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-		"allowSyntheticDefaultImports": true,
-		"resolveJsonModule": true,
-		"skipLibCheck": true,
-		"sourceMap": true,
-		"strict": true,
-		"moduleResolution": "bundler",
-		"module": "ESNext"
-	},
-	"ts-node": {
-		"esm": true,
-		"allowSyntheticDefaultImports": true,
-		"experimentalSpecifierResolution": "node"
-	},
-	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
-	// except $lib which is handled by https://kit.svelte.dev/docs/configuration#files
-	//
-	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
-	// from the referenced tsconfig.json - TypeScript does not merge them in
+  "extends": "./.svelte-kit/tsconfig.json",
+  "compilerOptions": {
+      "allowJs": true,
+      "checkJs": true,
+      "esModuleInterop": true,
+      "forceConsistentCasingInFileNames": true,
+      "allowSyntheticDefaultImports": true,
+      "resolveJsonModule": true,
+      "skipLibCheck": true,
+      "sourceMap": true,
+      "strict": true,
+      "moduleResolution": "bundler",
+      "module": "ESNext",
+      "lib": [
+          "dom",
+          "es2015"
+      ],
+      "types": [
+          "svelte",
+          "node",
+          "playwright"
+      ]
+  },
+  "include": [
+      "src/**/*.ts",
+      "src/**/*.svelte",
+      "tests/**/*.ts",
+      "tests/**/*.svelte"
+  ],
+  "exclude": [
+      "node_modules",
+      "dist"
+  ]
 }
