temp commit mostly useless

--- a/package.json
+++ b/package.json
@@ -12,32 +12,58 @@
     "test:ui": "pnpm vitest --ui",
     "test:coverage": "pnpm vitest run --coverage",
     "test:unit": "TEST_ENV=node pnpm vitest run ./tests/unit",
-    "test:unit:string-utils": "TEST_ENV=node pnpm vitest run ./tests/unit/string-utils.spec.ts",
-    "test:playground": "TEST_ENV=node pnpm vitest run ./tests/playground/tests/",
-    "test:playground:graph": "TEST_ENV=node pnpm vitest run ./tests/playground/tests/graph.spec.ts",
-    "test:integration": "TEST_ENV=jsdom pnpm vitest run ./tests/integration",
-    "test:integration:shadcn": "TEST_ENV=jsdom pnpm vitest run ./tests/integration/shadcn.spec.ts",
-    "test:integration:layout": "TEST_ENV=jsdom pnpm vitest run ./tests/integration/layout.spec.ts",
-    "test:integration:page": "TEST_ENV=jsdom pnpm vitest run ./tests/integration/page.spec.ts",
-    "test:configs": "NODE_OPTIONS='--max-old-space-size=4096' TEST_ENV=node pnpm vitest run ./tests/configs",
-    "test:configs:schemas": "TEST_ENV=node pnpm vitest run ./tests/configs/schemas.spec.ts",
-    "test:configs:environment": "TEST_ENV=node pnpm vitest run ./tests/configs/environment.spec.ts",
-    "test:configs:node-env": "TEST_ENV=node pnpm vitest run ./tests/configs/node-env.spec.ts",
-    "test:configs:pnpm": "TEST_ENV=node pnpm vitest run ./tests/configs/pnpm.spec.ts",
-    "test:configs:vite-build": "TEST_ENV=node pnpm vitest run ./tests/configs/vite-build.spec.ts",
-    "test:configs:config": "TEST_ENV=node pnpm vitest run ./tests/configs/config.spec.ts",
-    "test:configs:typescript": "TEST_ENV=node pnpm vitest run ./tests/configs/typescript.spec.ts",
-    "test:configs:svelte-setup": "TEST_ENV=node pnpm vitest run ./tests/configs/svelte-setup.spec.ts",
-    "test:configs:playwright-setup": "TEST_ENV=node pnpm vitest run ./tests/configs/playwright-setup.spec.ts",
-    "test:frameworks": "TEST_ENV=jsdom pnpm vitest run ./tests/frameworks",
-    "test:frameworks:svelte": "TEST_ENV=jsdom pnpm vitest run ./tests/frameworks/svelte.spec.ts",
-    "test:frameworks:tailwind": "TEST_ENV=jsdom pnpm vitest run ./tests/frameworks/tailwind.spec.ts",
-    "test:e2e": "TEST_ENV=jsdom pnpm vitest run ./tests/e2e",
-    "test:e2e:forms": "TEST_ENV=jsdom pnpm vitest run ./tests/e2e/forms.spec.ts",
-    "test:api": "TEST_ENV=node pnpm vitest run ./tests/api",
-    "test:api:routes-api": "TEST_ENV=node pnpm vitest run ./tests/api/routes-api.spec.ts",
-    "test:node": "TEST_ENV=node pnpm vitest run",
-    "test:jsdom": "TEST_ENV=jsdom pnpm vitest run",
+    "test:unit:node": "TEST_ENV=node pnpm vitest run ./tests/unit",
+    "test:unit:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/unit",
+    "test:unit:string-utils:node": "TEST_ENV=node pnpm vitest run ./tests/unit/string-utils.spec.ts",
+    "test:unit:string-utils:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/unit/string-utils.spec.ts",
+    "test:configs:node": "NODE_OPTIONS='--max-old-space-size=4096' TEST_ENV=node pnpm vitest run ./tests/configs",
+    "test:configs:jsdom": "NODE_OPTIONS='--max-old-space-size=4096' TEST_ENV=jsdom pnpm vitest run ./tests/configs",
+    "test:configs:schemas:node": "TEST_ENV=node pnpm vitest run ./tests/configs/schemas.spec.ts",
+    "test:configs:schemas:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/configs/schemas.spec.ts",
+    "test:configs:environment:node": "TEST_ENV=node pnpm vitest run ./tests/configs/environment.spec.ts",
+    "test:configs:environment:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/configs/environment.spec.ts",
+    "test:configs:node-env:node": "TEST_ENV=node pnpm vitest run ./tests/configs/node-env.spec.ts",
+    "test:configs:node-env:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/configs/node-env.spec.ts",
+    "test:configs:pnpm:node": "TEST_ENV=node pnpm vitest run ./tests/configs/pnpm.spec.ts",
+    "test:configs:pnpm:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/configs/pnpm.spec.ts",
+    "test:configs:vite-build:node": "TEST_ENV=node pnpm vitest run ./tests/configs/vite-build.spec.ts",
+    "test:configs:vite-build:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/configs/vite-build.spec.ts",
+    "test:configs:config:node": "TEST_ENV=node pnpm vitest run ./tests/configs/config.spec.ts",
+    "test:configs:config:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/configs/config.spec.ts",
+    "test:configs:typescript:node": "TEST_ENV=node pnpm vitest run ./tests/configs/typescript.spec.ts",
+    "test:configs:typescript:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/configs/typescript.spec.ts",
+    "test:configs:svelte-setup:node": "TEST_ENV=node pnpm vitest run ./tests/configs/svelte-setup.spec.ts",
+    "test:configs:svelte-setup:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/configs/svelte-setup.spec.ts",
+    "test:configs:playwright-setup:node": "TEST_ENV=node pnpm vitest run ./tests/configs/playwright-setup.spec.ts",
+    "test:configs:playwright-setup:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/configs/playwright-setup.spec.ts",
+    "test:frameworks:node": "TEST_ENV=node pnpm vitest run ./tests/frameworks",
+    "test:frameworks:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/frameworks",
+    "test:frameworks:svelte:node": "TEST_ENV=node pnpm vitest run ./tests/frameworks/svelte.spec.ts",
+    "test:frameworks:svelte:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/frameworks/svelte.spec.ts",
+    "test:frameworks:tailwind:node": "TEST_ENV=node pnpm vitest run ./tests/frameworks/tailwind.spec.ts",
+    "test:frameworks:tailwind:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/frameworks/tailwind.spec.ts",
+    "test:integration:node": "TEST_ENV=node pnpm vitest run ./tests/integration",
+    "test:integration:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/integration",
+    "test:integration:shadcn:node": "TEST_ENV=node pnpm vitest run ./tests/integration/shadcn.spec.ts",
+    "test:integration:shadcn:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/integration/shadcn.spec.ts",
+    "test:integration:layout:node": "TEST_ENV=node pnpm vitest run ./tests/integration/layout.spec.ts",
+    "test:integration:layout:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/integration/layout.spec.ts",
+    "test:integration:page:node": "TEST_ENV=node pnpm vitest run ./tests/integration/page.spec.ts",
+    "test:integration:page:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/integration/page.spec.ts",
+    "test:e2e:node": "TEST_ENV=node pnpm vitest run ./tests/e2e",
+    "test:e2e:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/e2e",
+    "test:e2e:forms:node": "TEST_ENV=node pnpm vitest run ./tests/e2e/forms.spec.ts",
+    "test:e2e:forms:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/e2e/forms.spec.ts",
+    "test:api:node": "TEST_ENV=node pnpm vitest run ./tests/api",
+    "test:api:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/api",
+    "test:api:routes-api:node": "TEST_ENV=node pnpm vitest run ./tests/api/routes-api.spec.ts",
+    "test:api:routes-api:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/api/routes-api.spec.ts",
+    "test:playground:node": "TEST_ENV=node pnpm vitest run ./tests/playground/tests/",
+    "test:playground:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/playground/tests/",
+    "test:playground:graph:node": "TEST_ENV=node pnpm vitest run ./tests/playground/tests/graph.spec.ts",
+    "test:playground:graph:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/playground/tests/graph.spec.ts",
+    "test:node": "TEST_ENV=node pnpm vitest run ./tests/configs/vite-config.spec.ts",
+    "test:jsdom": "TEST_ENV=jsdom pnpm vitest run ./tests/configs/vite-config.spec.ts",
     "test:special": "TEST_ENV=jsdom pnpm vitest run ./tests/special-case.spec.ts",
     "check": "pnpm svelte-kit sync && pnpm svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "pnpm svelte-kit sync && pnpm svelte-check --tsconfig ./tsconfig.json --watch",
@@ -55,54 +81,57 @@
     "playground8": "tsx playground/antv.ts"
   },
   "devDependencies": {
-    "@playwright/test": "^1.46.1",
-    "@sveltejs/adapter-auto": "^3.2.4",
-    "@sveltejs/kit": "^2.5.24",
+    "@playwright/test": "^1.48.1",
+    "@sveltejs/adapter-auto": "^3.3.0",
+    "@sveltejs/kit": "^2.7.2",
     "@sveltejs/vite-plugin-svelte": "4.0.0-next.6",
-    "@tailwindcss/typography": "^0.5.14",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/svelte": "^4.2.3",
+    "@tailwindcss/typography": "^0.5.15",
+    "@testing-library/jest-dom": "^6.6.2",
+    "@testing-library/svelte": "5.2.4",
     "@types/density-clustering": "^1.3.3",
-    "@types/eslint": "^8.56.11",
+    "@types/eslint": "^8.56.12",
     "@types/heic-convert": "^2.1.0",
     "@types/heic-decode": "^1.1.2",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.14",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^20.16.1",
-    "@vitest/ui": "^2.0.5",
+    "@types/node": "^22.7.9",
+    "@vitest/browser": "^2.1.5",
+    "@vitest/ui": "^2.1.3",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.9.0",
+    "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.43.0",
+    "eslint-plugin-svelte": "^2.46.0",
     "formsnap": "^1.0.1",
     "fs": "0.0.1-security",
-    "globals": "^15.9.0",
-    "jsdom": "^24.1.1",
-    "memfs": "^4.11.1",
-    "npm-check-updates": "^17.1.0",
+    "globals": "^15.11.0",
+    "jsdom": "^24.1.3",
+    "memfs": "^4.14.0",
+    "npm-check-updates": "^17.1.4",
     "path": "^0.12.7",
     "path-browserify": "^1.0.1",
-    "playwright": "^1.46.1",
-    "postcss": "^8.4.41",
+    "playwright": "^1.48.1",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
-    "prettier-plugin-svelte": "^3.2.6",
-    "prettier-plugin-tailwindcss": "^0.6.6",
+    "prettier-plugin-svelte": "^3.2.7",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "rollup-plugin-node-builtins": "^2.1.2",
-    "svelte": "5.0.0-next.185",
-    "svelte-check": "^3.8.5",
+    "svelte": "5.0.5",
+    "svelte-check": "^3.8.6",
     "svelte-inline-compile": "^0.2.0",
-    "sveltekit-superforms": "^2.17.0",
-    "tailwindcss": "^3.4.10",
+    "sveltekit-superforms": "^2.20.0",
+    "tailwindcss": "^3.4.14",
     "ts-node": "^10.9.2",
-    "tslib": "^2.6.3",
-    "tsx": "^4.17.0",
+    "tslib": "^2.8.0",
+    "tsx": "^4.19.1",
     "twind": "^0.16.19",
-    "typescript": "^5.5.4",
+    "typescript": "^5.6.3",
     "typescript-eslint": "8.0.0-alpha.44",
-    "vite": "^5.4.2",
-    "vite-plugin-commonjs": "^0.10.1",
+    "unplugin-auto-import": "^0.18.5",
+    "vite": "^5.4.10",
+    "vite-plugin-commonjs": "^0.10.3",
+    "vite-tsconfig-paths": "^5.1.2",
     "vitest": "^1.6.0",
-    "wait-on": "^8.0.0",
+    "wait-on": "^8.0.1",
     "zod": "^3.23.8"
   },
   "overrides": {
@@ -110,22 +139,22 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.36",
-    "@antv/g": "^6.0.12",
-    "@antv/g-canvas": "^2.0.11",
-    "@antv/g2": "^5.2.3",
-    "@antv/g6": "^5.0.16",
-    "@antv/hierarchy": "^0.6.12",
+    "@antv/g": "^6.1.2",
+    "@antv/g-canvas": "^2.0.18",
+    "@antv/g2": "^5.2.8",
+    "@antv/g6": "^5.0.26",
+    "@antv/hierarchy": "^0.6.14",
     "@antv/l7": "^2.22.1",
     "@antv/layout": "1.2.14-beta.5",
     "@antv/s2": "^1.55.8",
-    "@antv/util": "^3.3.8",
-    "@napi-rs/canvas": "^0.1.54",
+    "@antv/util": "^3.3.10",
+    "@napi-rs/canvas": "^0.1.58",
     "@sveltejs/vite-plugin-svelte-inspector": "^2.1.0",
-    "@tensorflow/tfjs": "^4.20.0",
-    "@tensorflow/tfjs-backend-wasm": "^4.20.0",
-    "@tensorflow/tfjs-backend-webgl": "^4.20.0",
-    "@tensorflow/tfjs-node": "^4.20.0",
-    "@tensorflow/tfjs-node-gpu": "^4.20.0",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-backend-wasm": "^4.22.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.22.0",
+    "@tensorflow/tfjs-node": "^4.22.0",
+    "@tensorflow/tfjs-node-gpu": "^4.22.0",
     "@twind/core": "^1.1.3",
     "@twind/preset-autoprefix": "^1.0.7",
     "@twind/preset-tailwind": "^1.1.4",
@@ -133,27 +162,27 @@
     "@types/node-kmeans": "^1.1.2",
     "@types/skmeans": "^0.11.7",
     "@types/supercluster": "^7.1.3",
-    "ai": "^3.3.14",
-    "axios": "^1.7.4",
-    "bits-ui": "^0.21.13",
+    "ai": "^3.4.18",
+    "axios": "^1.7.7",
+    "bits-ui": "^0.21.16",
     "bplist-creator": "^0.1.1",
     "bplist-parser": "^0.3.2",
     "canvas": "^2.11.2",
-    "carbon-icons-svelte": "^12.10.0",
+    "carbon-icons-svelte": "^12.12.0",
     "chartjs-node-canvas": "^4.1.6",
     "clsx": "^2.1.1",
-    "convex": "^1.14.2",
+    "convex": "^1.17.0",
     "convex-svelte": "^0.0.9",
     "density-clustering": "^1.3.0",
-    "embla-carousel-auto-height": "^8.2.0",
-    "embla-carousel-autoplay": "^8.2.0",
-    "embla-carousel-class-names": "^8.2.0",
-    "embla-carousel-fade": "^8.2.0",
-    "embla-carousel-svelte": "^8.2.0",
+    "embla-carousel-auto-height": "^8.3.0",
+    "embla-carousel-autoplay": "^8.3.0",
+    "embla-carousel-class-names": "^8.3.0",
+    "embla-carousel-fade": "^8.3.0",
+    "embla-carousel-svelte": "^8.3.0",
     "eslint-config-code-smells": "^0.1.2",
-    "exiftool-vendored": "^28.2.1",
+    "exiftool-vendored": "^28.7.0",
     "fast-glob": "^3.3.2",
-    "file-type": "^19.4.1",
+    "file-type": "^19.6.0",
     "graphology": "^0.25.4",
     "graphology-components": "^1.5.4",
     "heic-convert": "^2.1.0",
@@ -186,33 +215,38 @@
     "just-standard-deviation": "^2.2.0",
     "just-truncate": "^2.2.0",
     "just-unique": "^4.2.0",
-    "libheif-js": "^1.18.0",
+    "libheif-js": "^1.18.2",
     "ml-hclust": "^3.1.0",
     "ml-kmeans": "^6.0.0",
     "ml-pca": "^4.1.1",
     "ml-stat": "^1.3.3",
-    "music-metadata": "^10.2.0",
+    "music-metadata": "^10.5.1",
     "node-fpgrowth": "^1.2.1",
     "node-id3": "^0.2.6",
     "node-kmeans": "^1.1.9",
     "node-xattr": "^1.3.5",
-    "npm": "^10.8.2",
-    "openai": "^4.56.0",
+    "npm": "^10.9.0",
+    "openai": "^4.68.2",
+    "patch-package": "^8.0.0",
     "pdf-lib": "^1.17.1",
-    "pino": "^9.3.2",
-    "pino-pretty": "^11.2.2",
+    "pino": "^9.5.0",
+    "pino-pretty": "^11.3.0",
+    "punycode": "^2.3.1",
     "safe-replace": "^1.1.0",
     "scikitjs": "^1.24.0",
     "sharp": "^0.33.5",
-    "simple-statistics": "^7.8.3",
+    "simple-statistics": "^7.8.7",
     "skmeans": "^0.11.3",
     "supercluster": "^8.0.1",
     "svelte-confetti": "^2.1.2",
+    "svelte-preprocess": "^6.0.3",
     "svelte-radix": "^1.1.1",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.5.4",
     "tailwind-variants": "^0.2.1",
     "tfjs-node": "github:tensorflow/tfjs-node",
+    "tldts": "^6.1.54",
     "tsne-js": "^1.0.3",
+    "util": "^0.12.5",
     "vega-hierarchy": "^4.1.2"
   }
 }
