--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-	"Key Promoter.ignoredCommands": ["type", "cursor.checkonupdate"]
+	"Key Promoter.ignoredCommands": ["type", "cursor.checkonupdate"],
+	"css.lint.unknownAtRules": "ignore",
+	"scss.lint.unknownAtRules": "ignore",
+	"less.lint.unknownAtRules": "ignore"
 }
